--- a/.github/workflows/dbt_ci.yml
+++ b/.github/workflows/dbt_ci.yml
@@ -9,6 +9,16 @@ jobs:
     runs-on: ubuntu-latest
     environment: ci
 
+  
+    env:
+      SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
+      SNOWFLAKE_USER: ${{ secrets.SNOWFLAKE_USER }}
+      SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
+      SNOWFLAKE_ROLE: ${{ secrets.SNOWFLAKE_ROLE }}
+      SNOWFLAKE_DATABASE: ${{ secrets.SNOWFLAKE_DATABASE }}
+      SNOWFLAKE_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
+      SNOWFLAKE_SCHEMA: ${{ secrets.SNOWFLAKE_SCHEMA }}
+
     defaults:
       run:
         working-directory: my_project
@@ -45,24 +55,24 @@ jobs:
                 schema: "{{ env_var('SNOWFLAKE_SCHEMA') }}"
                 threads: 4
           EOF
-        env:
-          SNOWFLAKE_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
-          SNOWFLAKE_USER: ${{ secrets.SNOWFLAKE_USER }}
-          SNOWFLAKE_PASSWORD: ${{ secrets.SNOWFLAKE_PASSWORD }}
-          SNOWFLAKE_ROLE: ${{ secrets.SNOWFLAKE_ROLE }}
-          SNOWFLAKE_DATABASE: ${{ secrets.SNOWFLAKE_DATABASE }}
-          SNOWFLAKE_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
-          SNOWFLAKE_SCHEMA: ${{ secrets.SNOWFLAKE_SCHEMA }}
+
+ 
+      - name: Check required env exists (safe)
+        run: |
+          test -n "$SNOWFLAKE_ACCOUNT" || (echo "Missing SNOWFLAKE_ACCOUNT" && exit 1)
+          test -n "$SNOWFLAKE_USER" || (echo "Missing SNOWFLAKE_USER" && exit 1)
+          test -n "$SNOWFLAKE_DATABASE" || (echo "Missing SNOWFLAKE_DATABASE" && exit 1)
+          test -n "$SNOWFLAKE_SCHEMA" || (echo "Missing SNOWFLAKE_SCHEMA" && exit 1)
 
       - name: Show profiles.yml (safe)
         run: |
           sed -e "s/password: .*/password: ***MASKED***/" ~/.dbt/profiles.yml
 
-      - name: dbt debug
-        run: dbt debug --profiles-dir ~/.dbt --target ci
-
       - name: dbt deps
         run: dbt deps --profiles-dir ~/.dbt
+
+      - name: dbt debug
+        run: dbt debug --profiles-dir ~/.dbt --target ci
 
       - name: dbt build
         run: dbt build --profiles-dir ~/.dbt --target ci --fail-fast
